<resources>
    <string name="app_name">Mercadito NLD 2</string>
    <string name="home_title">Inicio</string>
    <string name="home_history">Historial</string>
    <string name="home_contact">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Ingrese el nombre del producto</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_description">Ingrese la descripcion</string>
    <string name="hint_price">Ingrese el precio</string>
    <string name="description_img_photo">Imagen del producto</string>
    <string name="edit_store_title_edit">Crear Producto</string>
    <string name="menu_save">Save</string>
    <string name="sp_first_time">first_time</string>
    <string name="sp_username">username</string>
    <string name="menu_logout">Logout</string>
    <string name="dialog_delete">Esta seguro que desea eliminar?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
</resources>